# Projet_VR

./: CMakeLists.txt
Voxel_VR/: settings.gradle.kts
Voxel_VR/app/: build.gradle.kts
Voxel_VR/app/src/androidTest/java/com/example/voxel_vr/: ExampleInstrumentedTest.java
Voxel_VR/app/src/main/: AndroidManifest.xml
Voxel_VR/app/src/main/assets/: modelviewprojection.frag  modelviewprojection.vert  shader.frag  shader.vert
Voxel_VR/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Voxel_VR/app/src/main/java/com/example/voxel_vr/: Chunk.java  MainActivity.java  Voxel.java
Voxel_VR/app/src/main/res/layout/: activity_main.xml
Voxel_VR/app/src/main/res/values/: strings.xml  themes.xml
Voxel_VR/app/src/main/res/values-night/: themes.xml
Voxel_VR/app/src/test/java/com/example/voxel_vr/: ExampleUnitTest.java
Voxel_VR/gradle/wrapper/: gradle-wrapper.properties
include/: Headers.hpp
shaders/: skybox_fragment.frag  skybox_vertex.vert
src/: main.cpp
